--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "lodash": "^4.14.0",
     "request": "^2.74.0",
     "request-promise": "^4.0.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.1.0"
   }
 }
