--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-exercise",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "example nodejs app that interacts with swapi.co and implements certain endpoints",
   "main": "app.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "lodash": "^4.14.0",
+    "pug": "^2.0.0-beta5",
     "request": "^2.74.0",
     "request-promise": "^4.0.2"
   },
