--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "node-exercise",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "example nodejs app that interacts with swapi.co and implements certain endpoints",
+  "author": "Arvind Kumar <arvind.kumar@msn.com>",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nullv01d/node-exercise.git"
   },
-  "author": "arvind.kumar@msn.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nullv01d/node-exercise/issues"
